--- a/taskbox/package.json
+++ b/taskbox/package.json
@@ -36,8 +36,10 @@
   "devDependencies": {
     "@storybook/addon-actions": "^5.3.9",
     "@storybook/addon-links": "^5.3.9",
+    "@storybook/addon-storyshots": "^5.3.9",
     "@storybook/addons": "^5.3.9",
     "@storybook/preset-create-react-app": "^1.5.2",
-    "@storybook/react": "^5.3.9"
+    "@storybook/react": "^5.3.9",
+    "react-test-renderer": "^16.12.0"
   }
 }
